Fixed alignment on sign-up page
Simple commit fixing quirk with the sign-up page on a full desktop view.

--- a/css/goconverse.webflow.css
+++ b/css/goconverse.webflow.css
@@ -101,7 +101,7 @@ p {
 .navigation {
   width: 100%;
   padding: 14px 20px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.20);
   background-color: #00c2a2;
 }
 .banner {
@@ -641,7 +641,7 @@ p {
   padding-top: 0px;
   padding-bottom: 0px;
   float: left;
-  clear: none;
+  clear: left;
   border-style: none;
   background-color: #f7f7f7;
   -webkit-transition: all 500ms ease;
@@ -733,7 +733,7 @@ p {
   padding-bottom: 13px;
   border: 1px solid black;
   background-color: rgba(255, 255, 255, 0.97);
-  box-shadow: rgba(0, 0, 0, 0) 0px 1px 3px 0px;
+  box-shadow: rgba(0, 0, 0, 0.03) 0px 1px 3px 0px;
 }
 .brand-scroll {
   padding-top: 4px;
